--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@ li a:hover:not(.active) {
   </div>
   
 <ul>
-  <li><a class="active" href="11.html">Головна</a></li>
+  <li><a class="active" href="index.html">Головна</a></li>
   <li><a href="#news">Теорія</a></li>
   <li><a href="#newss">Новини</a></li>
   <li style="float:right"><a href="reg.html">Регестрація</a></li>
