--- a/reg.html
+++ b/reg.html
@@ -92,11 +92,11 @@ li a:hover:not(.active) {
   <li><a  href="11.html">Головна</a></li>
   <li><a href="#news">Теорія</a></li>
   <li><a href="#newss">Новини</a></li>
-  <li style="float:right"><a class="active" href="reg.html">Регестрація</a></li>
+  <li style="float:right"><a class="active" href="reg.html">Рееєстрація</a></li>
 </ul>
 <br>
 
-<h3 align="center" style="color:#4B0082"><font face="colonna mt"><i>Регеструйтеся, щоб отримувати повідомлення з пізнавальними статтями та дослідженнями про художній світ минулого!</i></font></h3>
+<h3 align="center" style="color:#4B0082"><font face="colonna mt"><i>Реєструйтеся, щоб отримувати повідомлення з пізнавальними статтями та дослідженнями про художній світ минулого!</i></font></h3>
 
 <div>
   <form action="/action_page.php">
