--- a/reg.html
+++ b/reg.html
@@ -92,7 +92,7 @@ li a:hover:not(.active) {
   <li><a  href="11.html">Головна</a></li>
   <li><a href="#news">Теорія</a></li>
   <li><a href="#newss">Новини</a></li>
-  <li style="float:right"><a class="active" href="reg.html">Рееєстрація</a></li>
+  <li style="float:right"><a class="active" href="reg.html">Реєстрація</a></li>
 </ul>
 <br>
 
