--- a/reg.html
+++ b/reg.html
@@ -89,7 +89,7 @@ li a:hover:not(.active) {
   
 
 <ul>
-  <li><a  href="11.html">Головна</a></li>
+  <li><a  href="index.html">Головна</a></li>
   <li><a href="#news">Теорія</a></li>
   <li><a href="#newss">Новини</a></li>
   <li style="float:right"><a class="active" href="reg.html">Реєстрація</a></li>
