--- a/reg.html
+++ b/reg.html
@@ -92,6 +92,7 @@ li a:hover:not(.active) {
   <li><a  href="index.html">Головна</a></li>
   <li><a href="#news">Теорія</a></li>
   <li><a href="#newss">Новини</a></li>
+  <li><a href="table.html">Хронотабличка</a></li>
   <li style="float:right"><a class="active" href="reg.html">Реєстрація</a></li>
 </ul>
 <br>
