--- a/index.html
+++ b/index.html
@@ -49,6 +49,7 @@ li a:hover:not(.active) {
   <li><a class="active" href="index.html">Головна</a></li>
   <li><a href="#news">Теорія</a></li>
   <li><a href="#newss">Новини</a></li>
+   <li><a href="table.html">Хронотабличка</a></li>
   <li style="float:right"><a href="reg.html">Реєстрація</a></li>
 </ul>
 <br>
